fixes overlap issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,45 +1,45 @@
 body {
-	width:100%;
-	height:100%;
-	overflow:scroll;
-	margin:0;
-	margin-bottom: 5em;
-	padding: 0;
-	font-size: 100%;
-	font-family: Catamaran, sans-serif;
+  width:100%;
+  height:100%;
+  overflow:scroll;
+  margin:0;
+  margin-bottom: 5em;
+  padding: 0;
+  font-size: 100%;
+  font-family: Catamaran, sans-serif;
 }
 
 .vraag-antwoord-box {
-	position: absolute;
-	z-index: 10;
-	margin-top: 1em;
-	top:50%;
-	left:50%;
-	width: 40%;
-	height:50%;
-	transform: translate(-30%, -10%);
+  position: absolute;
+  z-index: 10;
+  margin-top:3%;
+  top:3%;
+  width: 80%;
+  height:30%;
+  transform: translate(10%, -20%);
+  text-align: center;
 }
 
 .outer-div {
-	position: relative;
+  position: relative;
 }
 
 .main-svg {
-	position: absolute;
-	z-index: -1;
-	top:0;
+  position: absolute;
+  z-index: -1;
+  top:0;
 }
 
 .vraag {
-	text-anchor: middle;
-	font-size: 1.5em;
-	font-weight: 400;
-	color: #102d43;
+  text-anchor: middle;
+  font-size: 1.2em;
+  font-weight: 600;
+  color: #102d43;
 }
 
 .antwoord {
-	text-anchor: middle;
-	font-size: 1.1em;
-	font-weight: 400;
-	color: #585757;
+  text-anchor: middle;
+  font-size: 1.0em;
+  font-weight: 400;
+  color: #585757;
 }
